<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Blue Water</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_stream_media">Stream Media</string>
    <string name="title_activity_set_up_connection">Connection Settings</string>
    <string name="title_activity_select_library">Select Library</string>
    <string name="title_activity_library">Library</string>
    <string name="lbl_user_name">User Name:</string>
    <string name="lbl_access_code">Access Code:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_local_only">Local Connections Only</string>
    <string name="btn_connect">Connect!</string>
    <string name="lbl_connected">Connected!</string>
    <string name="title_activity_file_view">File View</string>
    <string name="title_activity_view_now_playing">Now Playing</string>
    <string name="lbl_song_title">Now Playing</string>
    <string name="lbl_song_artist">Now Playing Artist</string>
    <string name="img_now_playing">Now Playing Album Image</string>
    <string name="btn_view_files">View Files</string>
    <string name="btn_shuffle_files">Shuffle</string>
    <string name="btn_repeat_playlist">Repeat Playlist</string>
    <string name="btn_play_files">Play All</string>
    <string name="lbl_now_playing">Now Playing</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_browse_library">Browse Library</string>
    <string name="lbl_connection_lost">Your connection has been lost. Reconnect?</string>
    <string name="lbl_connection_lost_title">Connection Lost</string>
    <string name="lbl_attempting_to_reconnect">The connection with the server has been lost. %1$s is attempting to reconnect.</string>
    <string name="btn_connecting">Connecting</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_select_server">Select Server</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_view_now_playing_files">Now Playing Files</string>
    <string name="lbl_waiting_for_connection">Waiting for Connection</string>
    <string name="lbl_click_to_cancel">Click here to cancel.</string>
    <string name="title_svc_now_playing">%1$s Now Playing</string>
    <string name="lbl_something_went_wrong">Something went wrong! Attempting to reconnect.</string>
    <string name="lbl_starting_service">Starting %1$s</string>
    <string name="title_activity_wait_for_connection">Waiting For Connection</string>
    <string name="btn_view_song_details">View Song Details</string>
    <string name="title_file_details">File Details</string>
    <string name="lbl_track_img">Track Image</string>
    <string name="lbl_loading">Loading&#8230;</string>
    <string name="btn_add_file">Queue file for playback</string>
    <string name="lbl_song_added_to_now_playing">Song added to Now Playing</string>
    <string name="lbl_getting_library_details">Getting library details</string>
    <string name="lbl_connecting_to_server_library">Connecting to server library</string>
    <string name="lbl_please_connect_to_valid_server">Please connect to a valid server</string>
    <string name="lbl_error_connecting_try_again">There was an error connecting to the server, try again later!</string>
    <string name="lbl_library_no_views">This library doesn\'t contain any views</string>
    <string name="lbl_getting_library_views">Getting library views</string>
    <string name="lbl_search">Search</string>
    <string name="title_activity_search_files">Search Files</string>
    <string name="lbl_search_hint">Search for files</string>
    <string name="title_activity_search_results">Search Results for &quot;%1$s&quot;</string>
    <string name="btn_remove_file">Remove file from playlist</string>
    <string name="lbl_error_getting_file_properties">Error getting file properties.</string>
    <string name="title_svc_connecting_to_server">Connecting to server</string>
</resources>