<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_connection_settings"
        android:title="@string/title_activity_set_up_connection"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings_dark" />
    
    <item android:id="@+id/menu_repeat_playlist"
        android:title="@string/btn_repeat_playlist"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/av_repeat_dark" />
    
    <item android:id="@+id/menu_view_now_playing_files"
        android:title="@string/title_view_now_playing_files"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:icon="@drawable/ic_list_dark" />

</menu>
