<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_connection_settings"
        android:title="@string/title_activity_set_up_connection"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings_dark" />
    
    <item android:id="@+id/menu_view_now_playing"
        android:title="@string/title_activity_view_now_playing"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:icon="@drawable/av_play_dark"
        android:visible="false" />
    
    <item android:id="@+id/search"
          android:title="@string/lbl_search"
          android:orderInCategory="300"
          android:icon="@drawable/ic_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    
</menu>
