<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grdConnection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="5" >

    <!-- Begin row 1 -->

    <TextView
        android:id="@+id/lblAccessCode"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="0"
        android:text="@string/lbl_access_code"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/txtAccessCode"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:text="" >

        <requestFocus />
    </EditText>
    <!-- End row 1 -->


    <!-- Begin row 2 -->

    <TextView
        android:id="@+id/lblUserName"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/lbl_user_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:text="" >

    </EditText>
    <!-- End row 2 -->


    <!-- Begin row 3 -->

    <TextView
        android:id="@+id/lblPassword"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/lbl_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPassword"
        android:text="" >

    </EditText>
    <!-- End row 3 -->


    <!-- Begin row 4 -->


    <CheckBox
        android:id="@+id/chkLocalOnly"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:text="@string/lbl_local_only" />

    <!-- End row 4 -->

    <Button
        android:id="@+id/btnConnect"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/btn_connect" />
    
</GridLayout>
